# NextGenBCIPlatform

./: CMakeLists.txt  README.md
BCIStudioApp/: CMakeLists.txt  main.cpp  resources - Copy (2).qrc  resources.qrc
BCIStudioApp/qml/: AdvancedLoadingIndicator.qml  BrainLogo.qml  NeuralNetworkBackground.qml  SplashScreen.qml  SplashScreen_copy.qml  StatusItem.qml  TypeWriterText.qml  main.qml
BCIStudioApp/qml/bci/: BCIExperimentController.qml  BCIParadigmManager.qml
BCIStudioApp/qml/bci/paradigms/: EnterpriseMotorImageryView.qml  EnterpriseP300View.qml  EnterpriseSSVEPView.qml  ModernParadigmCard.qml  MotorImageryConfigView.qml  P300ConfigView.qml  ParadigmCard.qml  ParadigmConfigFactory.qml  ParadigmExecutionView.qml  ParadigmSelectionView.qml  SSVEPConfigView.qml  SSVEPParadigm.qml  SSVEPSignalVisualizer.qml  StatBox.qml  StatItem.qml
BCIStudioApp/qml/bci/paradigms/components/: BrainActivationMap.qml  CSPPatternsVisualizer.qml  CueVisualization.qml  FlatButton.qml  FrequencyAccuracy.qml  FrequencySpectrum.qml  IndustrialIconButton.qml  LegendItem.qml  LiveMetric.qml  MotorImageryControlPanel.qml  MotorImageryEEGVisualizer.qml  MotorImageryExperimentController.qml  MotorImageryPerformanceMetrics.qml  MotorImageryTopBar.qml  P300ControlPanel.qml  P300EEGVisualizer.qml  P300ERPVisualizer.qml  P300FlashController.qml  P300GridItem.qml  P300GridVisualization.qml  P300PerformanceMetrics.qml  P300TopBar.qml  ParadigmAccessCard.qml  PerformanceGauge.qml  PerformanceMetric.qml  RecentExperimentItem.qml  RecentExperimentsList.qml  SSVEPPerformanceMetrics.qml  SSVEPTarget.qml  SettingItem.qml  SignalInfoItem.qml  StatDetail.qml  StatusBadge.qml  StatusIndicator.qml  SummaryItem.qml  SystemInfoItem.qml  SystemStatusPanel.qml
BCIStudioApp/qml/common/: ActionButton.qml  Button.qml  CheckBox.qml  ComboBox.qml  ControlPanel.qml  ControlSection.qml  Dialog__.qml  EnterpriseToolBar.qml  FlatButton.qml  GlassButton.qml  GlassCard.qml  IconButton.qml  MaterialButton.qml  MaterialCard.qml  MaterialTextField.qml  MaterialToolTip.qml  RadioButton.qml  RecordButton.qml  ScrollView.qml  Slider.qml  SplitView.qml  StatusIndicator.qml  TabBar.qml  TextField.qml  ThemedCard.qml  ToggleSwitch.qml  Toolbox.qml
BCIStudioApp/qml/components/: ActionButton.qml  Connection.qml  P300Stimulator.qml  qmldir
BCIStudioApp/qml/components/dashboard/: CognitiveGaugesCard.qml  EventLogCard.qml  LiveSignalCard.qml  MainOutputCard.qml  SignalQualityMapCard.qml  SpectrumCard.qml  SystemStatusCard.qml
BCIStudioApp/qml/core/: AppWindow.qml  Card.qml  GlassEffect.qml  NavigationButton.qml  NavigationSidebar.qml  NeuroButton.qml  NeuroHeader.qml  NeuroIconButton.qml  NeuroNavItem.qml  NeuroSidebar.qml  NeuroStatusBar.qml  NeuroTheme.qml  NewProjectDialog.qml  ProjectTypeCard.qml  PropertiesPanel.qml  SearchField.qml  SidebarButton.qml  SidebarHeader.qml  SidebarItem.qml  SidebarSection.qml  StatusBar.qml  StatusIndicatorMini.qml  StepIndicator.qml  SummaryItem.qml  SystemStatusMini.qml  Theme.qml  ThemeManager.qml  ThemeSwitcher.qml  ToolTip.qml  VersionInfo.qml  WorkspaceHeader.qml
BCIStudioApp/qml/core/themes/: DarkTheme.qml  LightTheme.qml
BCIStudioApp/qml/dashboard/: ActionButton.qml  AdvancedCognitiveMetricsCard.qml  AdvancedEventLogCard.qml  AdvancedHeadMap.qml  AdvancedMetricItem.qml  BaseCard.qml  Card.qml  CategoryTab.qml  CognitiveGauge_copy.qml  CognitiveGaugesCard.qml  CognitiveMetric.qml  CognitiveStateCard.qml  CognitiveTrendAnalysis.qml  CommandChip.qml  DashboardCard.qml  DashboardHeaderCard.qml  DashboardView.qml  DashboardWidgetLoader.qml  DraggableWidget - Copy.qml  ElectrodeItem.qml  ElectrodeItemEnterprise.qml  EmptyDashboardState.qml  EmptyState.qml  EventLogCard.qml  FloatingActionButton.qml  FpsCounter.qml  InfoItem.qml  LiveMetricItem.qml  LiveMetricPill.qml  LiveSignalCard.qml  LogEntryDelegate.qml  MainOutputCard.qml  MapControlButtonEnterprise.qml  MetricGauge.qml  MetricItem.qml  MetricTile.qml  PerformanceMetricsCard.qml  PieChart.qml  PipelineStatusCard.qml  PrimaryButton.qml  (+22 more)
BCIStudioApp/qml/home/: ActionCard.qml  HomeScreen.qml  ProjectItem.qml  QuickActionsGrid.qml  RecentProjectsCard.qml  StatBadge.qml  StatusIndicator.qml  SystemStatusCard.qml  WelcomeCard.qml
BCIStudioApp/qml/models/: DashboardModel.qml
BCIStudioApp/qml/nodeeditor/: CanvasContextMenu.qml  Card.qml  CategoryButton.qml  CategoryPill.qml  ConnectionItem.qml  CustomActionButton.qml  EmptyStatePanel.qml  InfoCard.qml  NodeCanvas.qml  NodeCategoryPanel.qml  NodeCategoryTabs.qml  NodeContextMenu.qml  NodeEditorToolbar.qml  NodeEditorView.qml  NodeInfoPanel.qml  NodeItem.qml  NodePort.qml  NodePropertiesPanel.qml  NodeSearchPanel.qml  NodeStatusSection.qml  NodeToolbox.qml  NodeToolboxCard.qml  NodeToolboxItem.qml  ParameterEditor.qml  ParameterRow.qml  PipelineInfoPanel.qml  PortItem.qml  SearchBox.qml  StatusBadge.qml
BCIStudioApp/qml/pipeline/: PerformanceMonitor.qml  PipelineExecutorView.qml
BCIStudioApp/qml/settings/: SettingsPage.qml
BCIStudioApp/qml/theme/: AppTheme.qml
BCIStudioApp/qml/views/: DashboardView.qml  WelcomeView.qml  WorkspaceView.qml
BCIStudioApp/qml/views/bci_panels/: P300SpellerInterface.qml
BCIStudioApp/qml/views/workspace/: CanvasView.qml  PropertiesView.qml  ToolboxView.qml
BCIStudioApp/shaders/: dropshadow.frag
BCIStudioApp/src/: AppController.cpp  AppController.h
CoreLib/: CMakeLists.txt  ThemeManager.h
CoreLib/src/include/: Node.h
CoreLib/src/managers/: ThemeManager.cpp
PluginAPI/: CMakeLists.txt
PluginAPI/include/: IPlugin.h
plugins/: CMakeLists.txt
tests/: CMakeLists.txt
